<resources>
    <string name="app_name">Bengkel Dealer</string>
    <string name="data_bengkel">Bengkel Motor</string>
    <string name="data_dealer">Dealer Motor</string>
    <string name="tentang">Tentang</string>
    <string name="bantu">Bantuan</string>
    <string name="detail_bengkel">Detail Bengkel</string>
    <string name="detail_dealer">Detail Dealer</string>
    <string name="copyright">\u00A9 Ripr Lutuk 2018</string>
    <string name="info_bengkel">INFORMASI BENGKEL</string>
    <string name="info_dealer">INFORMASI DEALER</string>
    <string name="blank">-</string>
    <string name="batas">: </string>
    <string name="kdbengkel">KDBengkel</string>
    <string name="kddealer">KDDealer</string>
    <string name="nmbengkel">Nama Bengkel</string>
    <string name="nmdealer">Nama Dealer</string>
    <string name="merk">Merk</string>
    <string name="jmlkaryawan">Jumlah Karyawan</string>
    <string name="jmlmontir">Jumlah Montir</string>
    <string name="haribuka">Hari Buka</string>
    <string name="jambuka">Jam Buka</string>
    <string name="alamat">Alamat</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kdpos">Kode Pos</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="propinsi">Propinsi</string>
    <string name="telepon">Telepon</string>
    <string name="pelayanan">Pelayanan</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="btn_lihat_petadealer">Peta</string>
    <string name="btn_lihat_petabengkel">Rute</string>
    <string name="btn_telp">Hubungi</string>
    <string name="title_activity_maps">Peta</string>
    <string name="upload_date">Waktu</string>
    <string name="upload_by">Oleh</string>
    <string name="version">version 1.0.1</string>
    <string name="tentang_apl_desainkode">Design and Code</string>
    <string name="tentang_apl_desainer">Ripr Lutuk</string>
    <string name="tentang_apl_mail">rizqy.pra85@gmail.com</string>
    <string name="bantuan">Aplikasi ini membutuhkan koneksi internet dan GPS, jadi pastikan sambungan data dan GPS anda aktif</string>
    <string name="bantuan1">Menu Bengkel Motor untuk melihat data dan lokasi Bengkel, Sedangkan Menu Dealer Motor untuk melihat data dan lokasi Dealer</string>
    <string name="bantuan2">Klik Marker untuk melihat nama dan button rute pada google maps</string>
    <string name="bantuan3">Jika Terjadi Force Close/ Keluar secara tiba-tiba, silahkah update Google Play Service anda di Play Store</string>
    <string name="bantuan4">Pada menu bengkel akan merefresh secara otomatis selama beberapa detik, gunanya untuk menampilkan lokasi bengkel terdekat dengan lokasi anda</string>
    <string name="bantuan5">Tekan kembali 2 kali setelah anda menekan menu rute pada detail bengkel untuk melihat peta lokasi bengkel</string>
    <string name="bantuan6">Jika peta lokasi tidak muncul di peta lokasi Dealer, tekan button kembali, kemudian tekan lagi button peta pada detail dealer</string>
    <string name="tentang1">Aplikasi Bengkel Dealer adalah aplikasi yang dibuat untuk menampilkan informasi bengkel motor dan dealer motor di wilayah Kabupaten Pemalang. Sehingga memudahkan user untuk mengetahui lokasi tanpa batasan waktu.</string>
    <string name="tentang2">Data yang ada di dalam aplikasi ini bersumberkan dari halaman administrator, yang beralamatkan di http://bengkeldealer.mapscrip.com</string>
    <string name="permission_dialog">Enable Permintaan Lokasi</string>
    <string name="go_to_permissions_settings">Pergi ke App setting dan enable permissions</string>
</resources>
